@@ -45,10 +45,11 @@ void printArray(ostream & o, const ndarray<int,2> &array) {
 }
 
 int main() {
-  boost::shared_ptr<PSEvt::ProxyDictI> proxyDict = boost::make_shared<PSEvt::ProxyDict>();
+  boost::shared_ptr<PSEvt::AliasMap> amap= boost::make_shared<PSEvt::AliasMap>();
+  boost::shared_ptr<PSEvt::ProxyDictI> proxyDict = boost::make_shared<PSEvt::ProxyDict>(amap);
   boost::shared_ptr<PSEvt::Event> evt = boost::make_shared<PSEvt::Event>(proxyDict);
   boost::shared_ptr<PSEnv::IExpNameProvider> expNameProvider;
-  boost::shared_ptr<PSEnv::Env> env = boost::make_shared<PSEnv::Env>("", expNameProvider, "");
+  boost::shared_ptr<PSEnv::Env> env = boost::make_shared<PSEnv::Env>("", expNameProvider, "", amap);
   MsgLog(logger, info, "loading event with ndarray");
   loadEvent(evt);
   boost::shared_ptr< ndarray<int,2> > myarray = evt->get(arrayKeyString);
