@@ -11,6 +11,11 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-11
+2014-01-13 David Schneider
+- updating to work with PSEvt V00-08-00, new tag with Alias support.
+  User should be able to use aliases in src filter list.
+	
 Tag: V00-00-10
 2014-01-13 David Schneider
 - using PSEvt::Source instead of string for user src filter list
